# marketplace

./: .replit  pyproject.toml  requirements.txt  wsgi.py
app/: admin.py  database.db  functions.py  main.py  main_qirui.py
app/templates/: additems.html  addpromotion.html  addstudents.html  addteachers.html  admin.html  authentication.html  changeimage.html  checkout.html  edititems.html  editpage.html  login.html  marketplace.html  passcodepage.html  popup.html  promotion.html  protectedmarketplace.html  success.html  tablestudents.html  tableteacher.html  teacher.html  teacherpromo.html  test.html  testviewstudent.html  viewpromotion.html  viewstudentcart.html  wipedbpage.html
app/templates/components/: card.html  navbar.html
