[tool.poetry]
name = "marketplace-2"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4.4"
sqlalchemy = "^1.3.22"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
